@@ -19,10 +19,10 @@
             <input name="email" type="email" placeholder="Email" class="form-control form-control-sm"
               formControlName="email" />
           </div>
-          <div class="ws-input">
+          <!-- <div class="ws-input">
             <input name="tel" type="tel" placeholder="Tel" class="form-control form-control-sm"
               formControlName="tel" />
-          </div>
+          </div> -->
           <div class="ws-input">
             <mat-select class="form-control form-control-sm" placeholder="Gender" formControlName="gender">
               <mat-option [value]="'male'">male</mat-option>
