@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-05-25                                -
+---------------------------------------------
+.: WSM: Task: Remove tel required from registration (WSM-2)
+
+---------------------------------------------
 - 2020-05-23                                -
 ---------------------------------------------
 .: WSM: Task: Update link folder with Wonder Scale Website (WSM-54)
